add Css for the Project view site

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\lisaj\\AppData\\Roaming\\NetBeans\\17\\config\\PayaraEE6\\Properties\\pfv3-1273834366.properties
+deploy.ant.properties.file=C:\\Users\\lenaj\\AppData\\Roaming\\NetBeans\\17\\config\\PayaraEE6\\Properties\\pfv32104959171.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/lisaj/payara6/glassfish/domains/domain1
-j2ee.server.home=C:/Users/lisaj/payara6/glassfish
-j2ee.server.instance=[C:\\Users\\lisaj\\payara6\\glassfish;C:\\Users\\lisaj\\payara6\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Users/lisaj/payara6
+j2ee.server.domain=C:/Users/lenaj/Payara_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/lenaj/Payara_Server/glassfish
+j2ee.server.instance=[C:\\Users\\lenaj\\Payara_Server\\glassfish;C:\\Users\\lenaj\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=C:/Users/lenaj/Payara_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\lisaj\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\lenaj\\AppData\\Roaming\\NetBeans\\17\\build.properties
